# SpyIP

./: .gitignore  LICENSE  README.md  pyproject.toml
spyip/: __init__.py  backend.py  exceptions.py  models.py
spyip/backends/: asynchronous.py  synchronous.py
tests/: test_asynchronous.py  test_backend.py  test_synchronous.py
